Code working for the neural network

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,10 +9,12 @@ add_subdirectory(submodules/dlib)
 add_subdirectory(submodules/glm)
 add_subdirectory(submodules/libfort)
 
-add_executable(fibonacci_benchmark src/big_o_notation/lib/fibonacci_no_master_theorem.cpp include/utils/y_combinator.h src/big_o_notation/fibonacci_benchmark.cpp include/big_o_notation/vptree_node.h)
+add_executable(fibonacci_benchmark src/big_o_notation/lib/fibonacci_no_master_theorem.cpp include/utils/y_combinator.h src/big_o_notation/fibonacci_benchmark.cpp include/big_o_notation/vptree_node.h include/utils/redi.h)
 
 add_executable(vp_tree src/big_o_notation/vantage_point_trees.cpp)
 target_link_libraries(vp_tree)
 
 add_executable(numeric_error src/big_o_notation/lib/fibonacci_no_master_theorem.cpp src/numeric/numeric_error.cpp src/numeric/structures/IntervalArithmetic.cpp include/numeric/structures/IntervalArithmetic.h src/numeric/structures/Sphere.cpp include/numeric/structures/Sphere.h src/numeric/structures/AABB.cpp include/numeric/structures/AABB.h src/numeric/structures/Vector.cpp include/numeric/structures/Vector.h src/utils/float.cpp src/numeric/lib/FibonacciTotalError.cpp src/numeric/structures/OBB.cpp include/numeric/structures/OBB.h)
 target_link_libraries(numeric_error fort glm::glm)
+
+add_executable(naif_neuralnetworks main.cpp final.cpp src/ai/weight.cpp include/ai/weight.h src/utils/FiniteFunction.cpp include/utils/FiniteFunction.h src/ai/Perceptron.cpp src/ai/Layer.cpp include/ai/Layer.h src/ai/BackwardPropagationNetwork.cpp include/ai/BackwardPropagationNetwork.h)
