Finished to implement the training and the testing over both mlp and svm for multiclass problem. Now, trying to implement the decision tree for tomorrow

--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "submodules/glm"]
 	path = submodules/glm
 	url = https://github.com/g-truc/glm
+[submodule "submodules/csv"]
+	path = submodules/csv
+	url = https://github.com/ben-strasser/fast-cpp-csv-parser
