--- a/.gitmodules
+++ b/.gitmodules
@@ -7,9 +7,6 @@
 [submodule "submodules/glm"]
 	path = submodules/glm
 	url = https://github.com/g-truc/glm
-[submodule "submodules/csv"]
-	path = submodules/csv
-	url = https://github.com/jackbergus/fast-cpp-csv-parser
 [submodule "submodules/rang"]
 	path = submodules/rang
 	url = https://github.com/agauniyal/rang
@@ -19,3 +16,6 @@
 [submodule "submodules/dataset_clashroyale"]
 	path = submodules/dataset_clashroyale
 	url = https://github.com/kekepins/clash-royal-analytics
+[submodule "submodules/git"]
+	path = submodules/git
+	url = https://github.com/jackbergus/fast-cpp-csv-parser.git
